# algos

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.c  lib.h  main.c
test/: CMakeLists.txt
test/source/: algos_test.c
